# Eigen-JEPA

./: CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  PUBLISHING.md  README.md  pyproject.toml
configs/: full.json  smoke.json
eigen_jepa/: __init__.py  benchmark.py  data.py  eval.py  losses.py  memory.py  model.py  plots.py  spectral.py  suite.py  train.py  utils.py
paper/: arxivrefined.sty  main.aux  main.out  main.tex
paper/figures/: memory_sweep.json  results_table.tex
results/benchmark/: metrics.json
results/benchmark/seed_7/full/: metrics.json  test_records.pt
results/benchmark/seed_7/no_gate/: metrics.json  test_records.pt
results/benchmark/seed_7/no_mask/: metrics.json  test_records.pt
results/benchmark/seed_7/no_memory/: metrics.json  test_records.pt
results/benchmark/seed_7/no_regime/: metrics.json  test_records.pt
results/benchmark/seed_7/no_spectral/: metrics.json  test_records.pt
results/benchmark/seed_7/no_subspace/: metrics.json  test_records.pt
results/final/: metrics.json
results/final/eval/: metrics.json
results/final_rigor/: metrics.json
results/final_rigor/eval/: metrics.json
results/smoke_run/: test_records.pt
results/smoke_run/checkpoints/: best.pt
results/suite/: suite_summary.json  suite_summary.md
results/suite/crypto/: metrics.json
results/suite/equity/: metrics.json
results/suite/rates/: metrics.json
results/suite_smoke/: suite_summary.json  suite_summary.md
results/suite_smoke/equity/: metrics.json
scripts/: rebuild_paper.sh  run_full_suite.py
tests/: test_sanity.py
(+109 files in other folders)
