[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigen-jepa"
version = "0.4.1"
description = "Eigen-JEPA: spectral joint-embedding predictive architecture for financial world modeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools]
packages = ["eigen_jepa"]
